# lac

./: .gitattributes  AUTHORS  CMakeLists.txt  Changelog  LICENSE  README.md  compile4windows.md
Android/: README.md
Android/testlac/: .project  build.gradle  local.properties  settings.gradle
Android/testlac/app/: build.gradle
Android/testlac/app/src/androidTest/java/com/example/testlac/: ExampleInstrumentedTest.java
Android/testlac/app/src/main/: AndroidManifest.xml
Android/testlac/app/src/main/assets/lac_model/: model.nb  q2b.dic  word.dic
Android/testlac/app/src/main/cpp/: CMakeLists.txt  lac.cpp  lac.h  lac_util.cpp  lac_util.h  native_lib.cpp
Android/testlac/app/src/main/cpp/paddle/include/: paddle_use_kernels.h  paddle_use_ops.h
Android/testlac/app/src/main/java/com/example/testlac/: MainActivity.java
Android/testlac/app/src/main/res/layout/: activity_main.xml
Android/testlac/app/src/main/res/values/: strings.xml
Android/testlac/app/src/test/java/com/example/testlac/: ExampleUnitTest.java
Android/testlac/gradle/wrapper/: gradle-wrapper.properties
c++/: README.md  lac_demo.cpp  lac_multi.cpp
c++/include/: ahocorasick.h  lac.h  lac_custom.h  lac_util.h
c++/src/: ahocorasick.cpp  lac.cpp  lac_custom.cpp  lac_util.cpp
conf/: customization.dic.example  q2b.dic  strong_punc.dic  tag.dic  word.dic
conf/model/: __model__  crfw  fc_0.b_0  fc_0.w_0  fc_1.b_0  fc_1.w_0  fc_2.b_0  fc_2.w_0  fc_3.b_0  fc_3.w_0  fc_4.b_0  fc_4.w_0  gru_0.b_0  gru_0.w_0  gru_1.b_0  gru_1.w_0  gru_2.b_0  gru_2.w_0  gru_3.b_0  gru_3.w_0  word_emb
include/: ilac.h
java/: LacDemo.java  LacMulti.java  README.md
java/com/baidu/nlp/: LAC.java
java/cpp/: lac_jni.cpp  lac_jni.h
python/: Changelog  README.md  infer.py  network.py  reader.py  setup.cfg  setup.py  train.py
python/LAC/: __init__.py  __main__.py  _compat.py  ahocorasick.py  cmdline.py  custom.py  lac.py  models.py  nets.py  prefix_tree.py  reader.py  segment.py  tags  triedtree.py  utils.py
python/LAC/key_model/conf/: args.ini  q2b.dic  tag.dic  word.dic
python/LAC/key_model/model/: __model__  embedding_1.w_0  fc_0.b_0  fc_0.w_0  fc_1.b_0  fc_1.w_0  fc_2.b_0  fc_2.w_0  fc_3.b_0  fc_3.w_0  lstm_0.b_0  lstm_0.w_0  lstm_1.b_0  lstm_1.w_0
python/LAC/lac_model/conf/: args.ini
python/LAC/lac_model/model/: __model__  crfw  fc_0.b_0  fc_0.w_0  fc_1.b_0  fc_1.w_0  fc_2.b_0  fc_2.w_0  fc_3.b_0  fc_3.w_0  fc_4.b_0  fc_4.w_0  gru_0.b_0  gru_0.w_0  gru_1.b_0  gru_1.w_0  gru_2.b_0  gru_2.w_0  gru_3.b_0  gru_3.w_0
python/LAC/seg_model/conf/: args.ini  tag.dic
python/LAC/seg_model/model/: __model__  crfw  fc_0.b_0  fc_0.w_0  fc_1.b_0  fc_1.w_0  fc_2.b_0  fc_2.w_0  fc_3.b_0  fc_3.w_0  fc_4.b_0  fc_4.w_0  gru_0.b_0  gru_0.w_0  gru_1.b_0  gru_1.w_0  gru_2.b_0  gru_2.w_0  gru_3.b_0  gru_3.w_0  word_emb
python/LAC/tests/: lac_test.py  test_lac.py
src/: customization_tagger.cpp  customization_tagger.h  ilac.cpp  lac.cpp  lac.h  lac_glb.h  lac_util.cpp  lac_util.h  main_tagger.cpp  main_tagger.h
test/src/: lac_demo.cpp
