# setup.cfg相关文档可参考如下链接
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
# 项目名称，发布、安装时以此作为包名
name = lac
# 作者姓名和邮箱地址
author = Baidu NLP
author_email = nlp-fenci@baidu.com
# 项目版本号，1.0以上版本才视为正式版
version = 2.0.0
# 项目概要描述信息，一句话让用户明白项目概要，不支持中文
description = A chinese lexical analysis tool by Baidu NLP.
# 项目的详细描述内容和格式，包括readme和changelog等，通常使用md或rst等格式
long_description = file: README.md
long_description_content_type = text/markdown
# 项目的home页，通常设置为代码库地址，也可以设置为wiki或其他文档url
home_page = https://github.com/baidu/lac
# 开源授权协议，非对外开源的项目无需关注
license = MIT
# 项目类别，非对外开源的项目无需关注
# 从PyPI官方给出的列表中选择符合的内容进行填写
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    License :: OSI Approved :: Apache Software License
    Natural Language :: Chinese (Simplified)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
# 关键字，用于检索，方便用户搜索到你的项目
keywords =
    baidu
    lac
    chinese
    lexical analysis

[options]
# 包名称，find:表示自动寻找，可在options.packages.find中进行详细配置
packages = find:
# 依赖管理，包含项目运行时所需要的所有依赖库
# 每行一个依赖库，只写直接依赖，通常无需考虑间接依赖
# 在这里指定的版本限制应当尽量抽象，通常只要指定最低版本和大版本号即可
#install_requires =
#    six >= 1.10

# 测试依赖，包含项目测试时所需要的额外的依赖库，格式与install_requires一致
# 可以使用内置的unittest，也可以使用更简单的pytest或nose等单测框架
# python3自带mock库，而python2没有，如果需要使用则必须写入测试依赖中
#tests_require =
#    pytest
#    mock

# 单测代码目录
# test_suite = lac.tests
# 自动添加被版本控制的数据文件
include_package_data = True
# 项目是纯py项目，可以直接执行zip源码包
zip_safe = False

# 可以通过以下配置将指定的函数变成命令行工具，允许用户直接执行
[options.entry_points]
console_scripts =
    lac = LAC.cmdline:main

# 可以通过以下配置向包中添加conf或data等非py文件，安装时会一同安装到site-packages目录下
# 仅支持文件，不支持目录，但可以使用通配
#[options.package_data]
#lac =
#    conf/*
#    data/*

[sdist]
dist_dir = output/dist

[bdist_wheel]
# 如果项目可以一份代码同时运行在python2和python3上，则设置universal为1
universal=1
dist_dir = output/dist

