[metadata]
name = lac
author = Baidu NLP
author_email = nlp-fenci@baidu.com
version = 2.1.2
description = A chinese lexical analysis tool by Baidu NLP.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/baidu/lac

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts = 
	lac = LAC.cmdline:main

[sdist]
dist_dir = output/dist

[bdist_wheel]
universal = 1
dist_dir = output/dist

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

